Add coalesced KeyDown handling for arrow key scrolling.

Android switched to sending coalesced KeyDown instead of
RawKeyDown/Char pair in http://crrev.com/2206053002.  The arrow key
handler in Source/web in particular did not account for this case,
therefore arrow keys stopped scrolling on Android (although all other
uses of arrow keys handled in Source/core still work).

NOTRY=true
BUG=657158

Review-Url: https://chromiumcodereview.appspot.com/2434463003
Cr-Commit-Position: refs/heads/master@{#426289}

Former-commit-id: 5492e01d2bb022d2bdfab86250f5a4c543cea122