third_party/WebKit/Source/web/WebFrameWidgetImpl.cpp
@@ -1061,6 +1061,7 @@ WebInputEventResult WebFrameWidgetImpl::keyEventDefault(
         return scrollViewWithKeyboard(keyCode, event.modifiers);
       }
       break;
+    case WebInputEvent::KeyDown:
     case WebInputEvent::RawKeyDown:
       if (event.modifiers == WebInputEvent::ControlKey) {
         switch (event.windowsKeyCode) {
