third_party/WebKit/Source/web/WebViewImpl.cpp
@@ -1676,6 +1676,7 @@ bool WebViewImpl::keyEventDefault(const WebKeyboardEvent& event) {
         return scrollViewWithKeyboard(keyCode, event.modifiers);
       }
       break;
+    case WebInputEvent::KeyDown:
     case WebInputEvent::RawKeyDown:
       if (event.modifiers == WebInputEvent::ControlKey) {
         switch (event.windowsKeyCode) {
